fix: truncated long r-fit-text on pdf

--- a/css/print/paper.scss
+++ b/css/print/paper.scss
@@ -141,6 +141,11 @@
 
 			transform: none !important;
 		}
+
+		.reveal .r-fit-text {
+			white-space: normal !important;
+		}
+
 		.reveal section img {
 			display: block;
 			margin: 15px 0px;
